--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -9,9 +9,9 @@
     <title>Películas y series</title>
   </head>
   <body>
-      <header>
-          <nav>
-            <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+    <header>
+      <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+      <nav>
         <ul>
           <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
           <li><a href="./peliculas/peliculas.html">Películas</a></li>
@@ -19,17 +19,18 @@
           <li><a href="./documentales/documentales.html">Documentales</a></li>
           <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
         </ul>
-            <label id="switch" style="float:right">
-              <input type="checkbox">
-              <span class="slider round"></span>
-          </label>
-      </header>
-      <footer>
-          <h5>Lenguaje de marcas I.E.S. Medina Azahara 
-          <br> © Blanca Cobos Marfil
-          || Todos los derechos reservados
-          </br> Córdoba, España. 2022 - 2023</h5>
-          </br>
+      </nav>
+      <label id="switch" style="float:right">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </header>
+    <footer>
+      <h5>Lenguaje de marcas I.E.S. Medina Azahara 
+        <br> © Blanca Cobos Marfil
+        || Todos los derechos reservados
+        </br> Córdoba, España. 2022 - 2023</h5>
+        </br>
       </footer>
       <script src="./scripts/jsmodooscuro.js"></script>
   </body>
