--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -8,15 +8,23 @@
     <link rel="shortcut icon" href="../images/logoweb.png">
    </head>
    <body>
-        <nav>
-            <ul>
-            <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
-            <li><a href="#peliculas">Películas</a></li>
-            <li><a href="#series">Series</a></li>
-            <li><a href="#documentales">Documentales</a></li>
-            <li style="float:right"><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <header>
+        <section>
+          <nav>
+            <img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+        <ul>
+          <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
+          <li><a href="../peliculas/peliculas.html">Películas</a></li>
+          <li><a href="../series/series.html">Series</a></li>
+          <li><a href="../documentales/documentales.html">Documentales</a></li>
+          <li style="float:right"><a href="../contacto/contacto.html">Contacto</a></li>
+        </ul>
+            <label id="switch" style="float:right">
+              <input type="checkbox">
+              <span class="slider round"></span>
+          </label>
+        </section>
+            <script src="../scripts/jsmodooscuro.js"></script>
         <h1>Contacto</h1>
             <section class="formulario">
                 <section class="contacto_info">
