--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -9,29 +9,44 @@
     <title>Películas y series</title>
   </head>
   <body>
-    <header>
-      <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
-      <nav>
-        <ul>
-          <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
-          <li><a href="./peliculas/peliculas.html">Películas</a></li>
-          <li><a href="./series/series.html">Series</a></li>
-          <li><a href="./documentales/documentales.html">Documentales</a></li>
-          <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
-      <label id="switch" style="float:right">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-    </header>
-    <footer>
-      <h5>Lenguaje de marcas I.E.S. Medina Azahara 
-        <br> © Blanca Cobos Marfil
-        || Todos los derechos reservados
-        </br> Córdoba, España. 2022 - 2023</h5>
-        </br>
-      </footer>
+      <header>
+        <section>
+          <nav>
+            <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+          <ul>
+            <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
+            <li><a href="./peliculas/peliculas.html">Películas</a></li>
+            <li><a href="./series/series.html">Series</a></li>
+            <li><a href="./documentales/documentales.html">Documentales</a></li>
+            <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
+          </ul>
+            <label id="switch" style="float:right">
+              <input type="checkbox">
+              <span class="slider round"></span>
+          </label>
+          <a title="Dahmer" href="./series/dahmer.html"><img src="./images/dahmer.jpg" alt="Dahmer" class="imgenlace"/></a>
+          <a title="Wednesday" href="./series/wednesday.html"><img src="./images/wednesday.jpg" alt="Wednesday" class="imgenlace"/></a>
+          <a title="La casa de papel" href="./series/lacasadepapel.html"><img src="./images/lacasadepapel.jpg" alt="La casa de papel" class="imgenlace"/></a>
+          <a title="Alcasser" href="./series/alcasser.html"><img src="./images/alcasser.jpg" alt="Alcasser" class="imgenlace"/></a>
+          <a title="El juego del calamar" href="./series/eljuegodelcalamar.html"><img src="./images/eljuegodelcalamar.jpeg" alt="El juego del calamar" class="imgenlace"/></a>
+          <a title="Dickinson" href="./series/dickinson.html"><img src="./images/dickinson.jpg" alt="Dickinson" class="imgenlace"/></a>
+          <a title="Marta del Castillo" href="./series/martadelcastillo.html"><img src="./images/martadelcastillo.jpg" alt="Marta del Castillo" class="imgenlace"/></a>
+          <a title="Hawkeye" href="./series/hawkeye.html"><img src="./images/hawkeye.jpg" alt="Hawkeye" class="imgenlace"/></a>
+          <a title="Euphoria" href="./series/euphoria.html"><img src="./images/euphoria.jpg" alt="Euphoria" class="imgenlace"/></a>
+          <a title="Riverdale" href="./series/riverdale.html"><img src="./images/riverdale.jpg" alt="Riverdale" class="imgenlace"/></a>
+          <a title="El cuento de la criada" href="./series/elcuentodelacriada.html"><img src="./images/elcuentodelacriada.jpg" alt="El cuento de la criada" class="imgenlace"/></a>
+          <a title="Stranger Things" href="./series/strangerthings.html"><img src="./images/strangerthings.jpg" alt="Stranger Things" class="imgenlace"/></a>
+          <a title="Sky Rojo" href="./series/skyrojo.html"><img src="./images/skyrojo.jpg" alt="Sky Rojo" class="imgenlace"/></a>
+          <a title="The crown" href="./series/thecrown.html"><img src="./images/thecrown.jpg" alt="The crown" class="imgenlace"/></a>
+          <a title="Vis a vis" href="./series/visavis.html"><img src="./images/visavis.jpg" alt="Vis a vis" class="imgenlace"/></a>
+        </section>
       <script src="./scripts/jsmodooscuro.js"></script>
+      <footer>
+          <h5>Lenguaje de marcas I.E.S. Medina Azahara 
+          <br> © Blanca Cobos Marfil
+          || Todos los derechos reservados
+          </br> Córdoba, España. 2022 - 2023</h5>
+          </br>
+      </footer>
   </body>
 </html>
