--- a/series/dahmer.html
+++ b/series/dahmer.html
@@ -25,7 +25,7 @@
                 <span class="slider round"></span>
             </label>
       </header>
-      <h1>Dahmer - Monstruo: La historia de Jeffrey Dahmer</h1>
+      <h1 style="margin-left: 2%;">Dahmer - Monstruo: La historia de Jeffrey Dahmer</h1>
       <br>
       <p>
       <img src="../images/dahmer.jpg" alt="Jeffrey Dahmer" class="imagen"><h2>Resumen</h2>La miniserie relata la vida del asesino Jeffrey Dahmer, y explora los diferentes 
@@ -39,22 +39,21 @@
         Todos sus crímenes fueron cometidos en Wisconsin y Ohio..</p>
         <br>
         <hr size="0.1%">
-        <p><h2>Reparto</h2></p>
+        <p><h2>Reparto principal</h2></p>
         <div>
-            <table>
-                <tr>
-                    <td><a title="Evan Peters" href="https://es.wikipedia.org/wiki/Evan_Peters" target="_blank"><img src="../images/dahmer/EvanPetersPortrait.webp" alt="Dahmer" class="imgenlace"/></a></td>
-                    <td><a title="Evan Peters" href="https://es.wikipedia.org/wiki/Richard_Jenkins" target="_blank"><img src="../images/dahmer/padre.webp" alt="Dahmer" class="imgenlace"/></a></td>
-                    <td><a title="Evan Peters" href="https://es.wikipedia.org/wiki/Evan_Peters" target="_blank"><img src="../images/dahmer/3.jpg" alt="Dahmer" class="imgenlace"/></a></td>
-                </tr>
-                <tr>
-                    <td><p class="imgenlace">Evan Peters - Jeffrey Dahmer</p></td>
-                    <td><p class="imgenlace">Evan Peters - Jeffrey Dahmer</p></td>
-                    <td><p class="imgenlace">Evan Peters - Jeffrey Dahmer</p></td>
-                </tr>
-            </table>
+           <a title="Evan Peters - Jeffrey Dahmer" href="https://es.wikipedia.org/wiki/Evan_Peters" target="_blank"><img src="../images/dahmer/EvanPetersPortrait.webp" alt="Evan Peters - Jeffrey Dahmer" class="imgenlace" style="width: 10%;"/></a>
+           <a title="Richard Jenkins - Lionel Dahmer" href="https://es.wikipedia.org/wiki/Richard_Jenkins" target="_blank"><img src="../images/dahmer/padre.jpg" alt="Evan Peters - Jeffrey Dahmer" class="imgenlace" style="width: 10%;"/></a>
+           <a title="Molly Ringwald - Shari Dahmer" href="https://es.wikipedia.org/wiki/Molly_Ringwald" target="_blank"><img src="../images/dahmer/3.jpg" alt="Evan Peters - Jeffrey Dahmer" class="imgenlace" style="width: 10%;"/></a>
+           <a title="Michael Learned - Catherine Dahmer" href="https://es.wikipedia.org/wiki/Michael_Learned" target="_blank"><img src="../images/dahmer/4.jpg" alt="Evan Peters - Jeffrey Dahmer" class="imgenlace" style="width: 10%;"/></a>
+           <a title="Niecy Nash - Glenda Cleveland" href="https://es.wikipedia.org/wiki/Niecy_Nash" target="_blank"><img src="../images/dahmer/5.jpg" alt="Evan Peters - Jeffrey Dahmer" class="imgenlace" style="width: 10%;"/></a>
         </div>
-      <br><br><br><br>
+        <hr size="0.1%">
+        <p><h2 style="text-align: center;">Trailer</h2></p>
+        <br>
+        <div class="trailers">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/XGTrtPATyPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      <br>
       </ul>
             <footer>
                 <h5>Lenguaje de marcas I.E.S. Medina Azahara 
