--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -12,19 +12,12 @@
         <section>
           <nav>
             <img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
-        <ul>
-          <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
-          <li><a href="../peliculas/peliculas.html">Películas</a></li>
-          <li><a href="../series/series.html">Series</a></li>
-          <li><a href="../documentales/documentales.html">Documentales</a></li>
-          <li style="float:right"><a href="../contacto/contacto.html">Contacto</a></li>
-        </ul>
-            <label id="switch" style="float:right">
-              <input type="checkbox">
-              <span class="slider round"></span>
-          </label>
-        </section>
-            <script src="../scripts/jsmodooscuro.js"></script>
+          <ul>
+            <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
+            <li><a href="../peliculas/peliculas.html">Películas</a></li>
+            <li><a href="../series/series.html">Series</a></li>
+            <li style="float:right"><a href="./contacto.html">Contacto</a></li>
+          </ul>
         <h1>Contacto</h1>
             <section class="formulario">
                 <section class="contacto_info">
@@ -58,7 +51,7 @@
                     </div>
                 </form>
             </section>
-            <br><br><br><br><br><br>
+            <br>
         <center>
             <footer>
                 <h5>Lenguaje de marcas I.E.S. Medina Azahara 
