--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -17,7 +17,6 @@
             <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
             <li><a href="./peliculas/peliculas.html">Películas</a></li>
             <li><a href="./series/series.html">Series</a></li>
-            <li><a href="./documentales/documentales.html">Documentales</a></li>
             <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
           </ul>
             <label id="switch" style="float:right">
@@ -33,7 +32,7 @@
           <a title="Marta del Castillo" href="./series/martadelcastillo.html"><img src="./images/martadelcastillo.jpg" alt="Marta del Castillo" class="imgenlace"/></a>
           <a title="Hawkeye" href="./series/hawkeye.html"><img src="./images/hawkeye.jpg" alt="Hawkeye" class="imgenlace"/></a>
           <a title="Euphoria" href="./series/euphoria.html"><img src="./images/euphoria.jpg" alt="Euphoria" class="imgenlace"/></a>
-          <a title="Riverdale" href="./series/riverdale.html"><img src="./images/riverdale.jpg" alt="Riverdale" class="imgenlace"/></a>
+          <a title="Los misterios de Laura" href="../series/losmisteriosdelaura.html"><img src="./images/losmisteriosdelaura.jpg" alt="Los misterios de Laura" class="imgenlace"/></a>
           <a title="El cuento de la criada" href="./series/elcuentodelacriada.html"><img src="./images/elcuentodelacriada.jpg" alt="El cuento de la criada" class="imgenlace"/></a>
           <a title="Stranger Things" href="./series/strangerthings.html"><img src="./images/strangerthings.jpg" alt="Stranger Things" class="imgenlace"/></a>
           <a title="Sky Rojo" href="./series/skyrojo.html"><img src="./images/skyrojo.jpg" alt="Sky Rojo" class="imgenlace"/></a>
