--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -12,28 +12,40 @@
       <header>
         <section>
           <nav>
-            <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
-          <ul>
+            <a href="./index.html"><img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left"></a>          <ul>
             <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
             <li><a href="./peliculas/peliculas.html">Películas</a></li>
             <li><a href="./series/series.html">Series</a></li>
             <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
           </ul>
+          </nav>
             <label id="switch" style="float:right">
               <input type="checkbox">
               <span class="slider round"></span>
           </label>
+          <a title="Avatar" href="./peliculas/avatar.html"><img src="./images/avatar.jpg" alt="Avatar" class="imgenlace"/></a>
           <a title="Dahmer" href="./series/dahmer.html"><img src="./images/dahmer.jpg" alt="Dahmer" class="imgenlace"/></a>
+          <a title="Bumblebee" href="./peliculas/bumblebee.html"><img src="./images/bumblebee.jpg" alt="Bumblebee" class="imgenlace"/></a>
           <a title="Wednesday" href="./series/wednesday.html"><img src="./images/wednesday.jpg" alt="Wednesday" class="imgenlace"/></a>
+          <a title="Black Widow" href="./peliculas/blackwidow.html"><img src="./images/blackwidow.webp" alt="Black Widow" class="imgenlace"/></a>
           <a title="La casa de papel" href="./series/lacasadepapel.html"><img src="./images/lacasadepapel.jpg" alt="La casa de papel" class="imgenlace"/></a>
+          <a title="Mulan" href="./peliculas/mulan.html"><img src="./images/mulan.jpg" alt="Mulan" class="imgenlace"/></a>
           <a title="Alcasser" href="./series/alcasser.html"><img src="./images/alcasser.jpg" alt="Alcasser" class="imgenlace"/></a>
+          <a title="Scream" href="./peliculas/scream.html"><img src="./images/scream.jpg" alt="Scream" class="imgenlace"/></a>
           <a title="El juego del calamar" href="./series/eljuegodelcalamar.html"><img src="./images/eljuegodelcalamar.jpeg" alt="El juego del calamar" class="imgenlace"/></a>
+          <a title="Lucy" href="./peliculas/lucy.html"><img src="./images/lucy.jpg" alt="Lucy" class="imgenlace"/></a>
           <a title="Dickinson" href="./series/dickinson.html"><img src="./images/dickinson.jpg" alt="Dickinson" class="imgenlace"/></a>
+          <a title="Harry Potter y la piedra filosofal" href="./peliculas/harrypotter.html"><img src="./images/harrypoter.jpg" alt="Harry Potter y la piedra filosofal" class="imgenlace"/></a>
           <a title="Marta del Castillo" href="./series/martadelcastillo.html"><img src="./images/martadelcastillo.jpg" alt="Marta del Castillo" class="imgenlace"/></a>
+          <a title="It" href="./peliculas/it.html"><img src="./images/it.jpg" alt="It" class="imgenlace"/></a>
           <a title="Hawkeye" href="./series/hawkeye.html"><img src="./images/hawkeye.jpg" alt="Hawkeye" class="imgenlace"/></a>
+          <a title="El niño con el pijama de rayas" href="./peliculas/elniñopr.html"><img src="./images/elniñoconelpijamaderayas.jpg" alt="El niño co el pijama de rayas" class="imgenlace"/></a>
           <a title="Euphoria" href="./series/euphoria.html"><img src="./images/euphoria.jpg" alt="Euphoria" class="imgenlace"/></a>
-          <a title="Los misterios de Laura" href="../series/losmisteriosdelaura.html"><img src="./images/losmisteriosdelaura.jpg" alt="Los misterios de Laura" class="imgenlace"/></a>
+          <a title="Ruega por nosotros" href="./peliculas/ruegapornosotros.html"><img src="./images/ruegapornosotros.jpg" alt="Ruega por nosotros" class="imgenlace"/></a>
+          <a title="Los misterios de Laura" href="./series/losmisteriosdelaura.html"><img src="./images/losmisteriosdelaura.jpg" alt="Los misterios de Laura" class="imgenlace"/></a>
+          <a title="Expediente Warren 1" href="./peliculas/expedientewarren1.html"><img src="./images/expedientewarren1.jpg" alt="Expediente Warren 1" class="imgenlace"/></a>
           <a title="El cuento de la criada" href="./series/elcuentodelacriada.html"><img src="./images/elcuentodelacriada.jpg" alt="El cuento de la criada" class="imgenlace"/></a>
+          <a title="Siempre a tu lado, Hachiko" href="./peliculas/hachiko.html"><img src="./images/hachiko.jpg" alt="Siempre a tu lado, Hachiko" class="imgenlace"/></a>
           <a title="Stranger Things" href="./series/strangerthings.html"><img src="./images/strangerthings.jpg" alt="Stranger Things" class="imgenlace"/></a>
           <a title="Sky Rojo" href="./series/skyrojo.html"><img src="./images/skyrojo.jpg" alt="Sky Rojo" class="imgenlace"/></a>
           <a title="The crown" href="./series/thecrown.html"><img src="./images/thecrown.jpg" alt="The crown" class="imgenlace"/></a>
