--- a/peliculas/peliculas.html
+++ b/peliculas/peliculas.html
@@ -12,18 +12,30 @@
       <header>
         <section>
           <nav>
-            <img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
-        <ul>
+            <a href="../index.html"><img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left"></a>        <ul>
           <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
           <li><a href="../peliculas/peliculas.html">Películas</a></li>
           <li><a href="../series/series.html">Series</a></li>
           <li style="float:right"><a href="../contacto/contacto.html">Contacto</a></li>
         </ul>
+      </nav>
             <label id="switch" style="float:right">
               <input type="checkbox">
               <span class="slider round"></span>
           </label>
-        <section>
+          <a title="Avatar" href="../peliculas/avatar.html"><img src="../images/avatar.jpg" alt="Avatar" class="imgenlace"/></a>
+          <a title="Bumblebee" href="../peliculas/bumblebee.html"><img src="../images/bumblebee.jpg" alt="Bumblebee" class="imgenlace"/></a>
+          <a title="Black Widow" href="../peliculas/blackwidow.html"><img src="../images/blackwidow.webp" alt="Black Widow" class="imgenlace"/></a>
+          <a title="Mulan" href="../peliculas/mulan.html"><img src="../images/mulan.jpg" alt="Mulan" class="imgenlace"/></a>
+          <a title="Scream" href="../peliculas/scream.html"><img src="../images/scream.jpg" alt="Scream" class="imgenlace"/></a>
+          <a title="Lucy" href="../peliculas/lucy.html"><img src="../images/lucy.jpg" alt="Lucy" class="imgenlace"/></a>
+          <a title="Harry Potter y la piedra filosofal" href="../peliculas/harrypotter.html"><img src="../images/harrypoter.jpg" alt="Harry Potter y la piedra filosofal" class="imgenlace"/></a>
+          <a title="It" href="../peliculas/it.html"><img src="../images/it.jpg" alt="It" class="imgenlace"/></a>
+          <a title="El niño con el pijama de rayas" href="../peliculas/elniñopr.html"><img src="../images/elniñoconelpijamaderayas.jpg" alt="El niño co el pijama de rayas" class="imgenlace"/></a>
+          <a title="Ruega por nosotros" href="../peliculas/ruegapornosotros.html"><img src="../images/ruegapornosotros.jpg" alt="Ruega por nosotros" class="imgenlace"/></a>
+          <a title="Expediente Warren 1" href="../peliculas/expedientewarren1.html"><img src="../images/expedientewarren1.jpg" alt="Expediente Warren 1" class="imgenlace"/></a>
+          <a title="Siempre a tu lado, Hachiko" href="../peliculas/hachiko.html"><img src="../images/hachiko.jpg" alt="Siempre a tu lado, Hachiko" class="imgenlace"/></a>
+        </section>
       <script src="../scripts/jsmodooscuro.js"></script>
       <footer>
           <h5>Lenguaje de marcas I.E.S. Medina Azahara 
