--- a/series/alcasser.html
+++ b/series/alcasser.html
@@ -13,12 +13,12 @@
       <header>
         <section>
           <nav>
-            <img src="./images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+            <a href="../index.html"><img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left"></a>
           <ul>
-            <li><a href="./paginaprincipal.html" class="active"><img src="./images/logoweb.png" alt="Página principal" height="14px"></a></li>
-            <li><a href="./peliculas/peliculas.html">Películas</a></li>
-            <li><a href="./series/series.html">Series</a></li>
-            <li style="float:right"><a href="./contacto/contacto.html">Contacto</a></li>
+            <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
+            <li><a href="../peliculas/peliculas.html">Películas</a></li>
+            <li><a href="../series/series.html">Series</a></li>
+            <li style="float:right"><a href="../contacto/contacto.html">Contacto</a></li>
           </ul>
             <label id="switch" style="float:right">
               <input type="checkbox">
@@ -28,7 +28,7 @@
       <h1 style="margin-left: 2%;">El caso Alcassèr</h1>
       <br>
       <p>
-      <img src="..//images/alcasser.jpg" alt="El caso Alcassèr" class="imagen">
+      <img src="../images/alcasser.jpg" alt="El caso Alcassèr" class="imagen">
       <h2>Resumen</h2>
       En noviembre de 1992, en el municipio valenciano de Alcàsser, ocurrió un triple asesinato cuyas víctimas fueron 
       Míriam, Toñi y Desirée, unas jóvenes chicas de catorce y quince años que antes de morir sufrieron de secuestro, violación y tortura.
