--- a/series/dahmer.html
+++ b/series/dahmer.html
@@ -12,12 +12,11 @@
     <div id="contenido">
       <header>
           <nav>
-            <img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
+            <a href="../index.html"><img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left"></a>
             <ul>
                 <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
                 <li><a href="../peliculas/peliculas.html">Películas</a></li>
                 <li><a href="../series/series.html">Series</a></li>
-                <li><a href="../documentales/documentales.html">Documentales</a></li>
                 <li style="float:right"><a href="../contacto/contacto.html">Contacto</a></li>
             </ul>
             <label id="switch" style="float:right">
