--- a/series/series.html
+++ b/series/series.html
@@ -12,8 +12,7 @@
       <header>
         <section>
           <nav>
-            <img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left">
-          <ul>
+            <a href="../index.html"><img src="../images/logotipo.png" alt="Logo Series y Peliculas" width="8%" style="float:left"></a>          <ul>
             <li><a href="../paginaprincipal.html" class="active"><img src="../images/logoweb.png" alt="Página principal" height="14px"></a></li>
             <li><a href="../peliculas/peliculas.html">Películas</a></li>
             <li><a href="../series/series.html">Series</a></li>
