--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -53,11 +53,11 @@
         </section>
       <script src="./scripts/jsmodooscuro.js"></script>
       <footer>
+        <a title="RSS" href="./rss/rss.xml"><img src="./rss/rss.png" alt="RSS" style="width: 2%; float:right"/></a>
           <h5>Lenguaje de marcas I.E.S. Medina Azahara 
           <br> © Blanca Cobos Marfil
           || Todos los derechos reservados
           </br> Córdoba, España. 2022 - 2023</h5>
-          </br>
       </footer>
   </body>
 </html>
