--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <div class="btn-animate">
             <a class="btn-signin" href="./paginaprincipal.html">Iniciar sesión</a>
       </form>
+      <br><br><br><br><br>
+      <a title="RSS" href="./rss/rss.xml"><img src="./rss/rss.png" alt="RSS" style="width: 10%; float:center"/></a>
     </div>
 <footer>
   <center>
