--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </form>
       <br><br><br><br><br>
       <a title="RSS" href="./rss/rss.xml"><img src="./rss/rss.png" alt="RSS" style="width: 10%; float:center"/></a>
+      <a title="ATOM" href="./atom/atom.xml"><img src="./atom/atom.png" alt="ATOM" style="width: 11%; float:center"/></a>
     </div>
 <footer>
   <center>
